--- a/commerce.html
+++ b/commerce.html
@@ -14,6 +14,9 @@
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Centro de Comércio</h1>
+      <div class="module-stats">
+        <span class="stat">Saldo: <b id="fundsDisplay">—</b></span>
+      </div>
     </header>
     <main class="module-content">
       <table>
@@ -25,9 +28,10 @@
             <th>Ações</th>
           </tr>
         </thead>
-        <tbody id="commerceBody"></tbody>
+        <tbody id="productsBody"></tbody>
       </table>
     </main>
+    <script src="js/core.js"></script>
     <script src="js/commerce.js"></script>
   </body>
 </html>
