--- a/infrastructure.html
+++ b/infrastructure.html
@@ -14,6 +14,10 @@
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Infraestrutura</h1>
+      <div class="module-stats">
+        <span class="stat">Saldo: <b id="fundsDisplay">—</b></span>
+        <span class="stat">Saldo mensal (prev.): <b id="netPreview">—</b></span>
+      </div>
     </header>
     <main class="module-content">
       <table>
@@ -27,6 +31,7 @@
         <tbody id="infraBody"></tbody>
       </table>
     </main>
+    <script src="js/core.js"></script>
     <script src="js/infrastructure.js"></script>
   </body>
 </html>
