--- a/war.html
+++ b/war.html
@@ -14,6 +14,10 @@
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Central de Guerra</h1>
+      <div class="module-stats">
+        <span class="stat">Saldo: <b id="fundsDisplay">—</b></span>
+        <span class="stat">Upkeep militar: <b id="milUpkeep">—</b></span>
+      </div>
     </header>
     <main class="module-content">
       <section class="select-war-target">
@@ -49,6 +53,7 @@
         </div>
       </section>
     </main>
+    <script src="js/core.js"></script>
     <script src="js/war.js"></script>
   </body>
 </html>
