--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Estratégia 2030 - Vale Games</title>
+  <title>World Protocol</title>
   <link rel="stylesheet" href="css/style.css" />
   <!-- Fonts for a futuristic and premium look -->
   <link
@@ -11,25 +11,28 @@
     rel="stylesheet"
   />
 </head>
-<body>
+<body class="app-shell">
   <!-- Splash screen with logo -->
-  <div id="splash" class="screen active">
+  <div id="splash" class="screen active bg-hero">
     <div class="logo-container">
       <div class="logo-text">VALE GAMES</div>
     </div>
   </div>
 
   <!-- Main menu -->
-  <div id="menu" class="screen">
-    <h1 class="title">Estratégia 2030</h1>
-    <div class="menu-buttons">
-      <button id="newGameBtn" class="btn">Novo Jogo</button>
-      <button id="continueBtn" class="btn">Continuar</button>
+  <div id="menu" class="screen bg-hero">
+    <div class="aaa-menu">
+      <h1 class="aaa-title">WORLD PROTOCOL</h1>
+      <p class="aaa-sub">You were not elected. You were activated.</p>
+      <div class="aaa-actions">
+        <button id="newGameBtn" class="btn">NOVO JOGO</button>
+        <button id="continueBtn" class="btn secondary">CONTINUAR</button>
+      </div>
     </div>
   </div>
 
   <!-- New game screen -->
-  <div id="new-game" class="screen">
+  <div id="new-game" class="screen bg-hero">
     <h2>Novo Jogo</h2>
     <form id="newGameForm">
       <label for="playerName">Seu nome:</label>
@@ -49,53 +52,94 @@
   </div>
 
   <!-- Load game screen -->
-  <div id="load-game" class="screen">
+  <div id="load-game" class="screen bg-hero scrollable">
     <h2>Continuar Jogo</h2>
     <div id="saveSlots" class="save-slots"></div>
     <button id="backToMenuFromLoad" class="btn secondary">Voltar</button>
   </div>
 
   <!-- Story message screen -->
-  <div id="message" class="screen">
+  <div id="message" class="screen bg-hero">
     <div id="message-content" class="message-box"></div>
     <button id="continueToLobby" class="btn hidden">Continuar</button>
   </div>
 
   <!-- Lobby screen -->
   <div id="lobby" class="screen lobby-screen">
-    <header class="lobby-header">
-      <div class="player-info">
-        <span id="playerNameDisplay"></span>
-        <span id="playerNationDisplay"></span>
-      </div>
-      <div class="funds-info">
-        Saldo: <span id="fundsDisplay"></span>
-      </div>
-    </header>
+    <div style="position:absolute; top: calc(12px + var(--safe-t)); left:12px; right:12px; text-align:center; font-family:Orbitron,sans-serif; opacity:.92; letter-spacing:1px;">
+      Comando Central
+    </div>
+
     <div class="lobby-buttons">
-      <button id="relationsBtn" class="lobby-btn">
-        <img src="assets/images/icons/icon-relations.png" alt="Relações" />
-        <span>Relações</span>
+      <button id="relationsBtn" class="lobby-btn" aria-label="Centro de Relações">
+        <div class="thumb" style="background-image:url('assets/images/background-relations.png')"></div>
+        <div class="meta">
+          <img src="assets/images/icons/icon-relations.png" alt="" />
+          <div style="text-align:left">
+            <span>Relações</span>
+            <div class="hint">Diplomacia • setores internos</div>
+          </div>
+        </div>
       </button>
-      <button id="warBtn" class="lobby-btn">
-        <img src="assets/images/icons/icon-war.png" alt="Guerra" />
-        <span>Guerra</span>
+      <button id="warBtn" class="lobby-btn" aria-label="Central de Guerra">
+        <div class="thumb" style="background-image:url('assets/images/background-war.png')"></div>
+        <div class="meta">
+          <img src="assets/images/icons/icon-war.png" alt="" />
+          <div style="text-align:left">
+            <span>Guerra</span>
+            <div class="hint">Exército • Marinha • Aeronáutica</div>
+          </div>
+        </div>
       </button>
-      <button id="commerceBtn" class="lobby-btn">
-        <img src="assets/images/icons/icon-commerce.png" alt="Comércio" />
-        <span>Comércio</span>
+      <button id="commerceBtn" class="lobby-btn" aria-label="Comércio">
+        <div class="thumb" style="background-image:url('assets/images/background-commerce.png')"></div>
+        <div class="meta">
+          <img src="assets/images/icons/icon-commerce.png" alt="" />
+          <div style="text-align:left">
+            <span>Comércio</span>
+            <div class="hint">Compra • venda • exportação</div>
+          </div>
+        </div>
       </button>
-      <button id="infraBtn" class="lobby-btn">
-        <img
-          src="assets/images/icons/icon-infrastructure.png"
-          alt="Infraestrutura"
-        />
-        <span>Infraestrutura</span>
+      <button id="infraBtn" class="lobby-btn" aria-label="Infraestrutura">
+        <div class="thumb" style="background-image:url('assets/images/background-infrastructure.png')"></div>
+        <div class="meta">
+          <img src="assets/images/icons/icon-infrastructure.png" alt="" />
+          <div style="text-align:left">
+            <span>Infraestrutura</span>
+            <div class="hint">Saúde • educação • pesquisa</div>
+          </div>
+        </div>
       </button>
+    </div>
+
+    <!-- HUD AAA (fixo) -->
+    <div class="hud" id="hud">
+      <div class="pill" id="hudCommander">—</div>
+      <div class="pill" id="hudDate">—</div>
+      <div class="pill grow" id="hudFunds">—</div>
+      <div class="pill" id="hudIncome">—</div>
+      <div class="hud-btns">
+        <button class="hud-icon" id="hudMissions" title="Missões">📌</button>
+        <button class="hud-icon" id="hudNextTurn" title="Próximo turno">⏭</button>
+        <button class="hud-icon" id="hudSave" title="Salvar">💾</button>
+      </div>
+    </div>
+
+    <!-- Modal Missões -->
+    <div id="missionsModal" class="modal-backdrop">
+      <div class="modal" role="dialog" aria-modal="true" aria-label="Missões">
+        <header>
+          <h3>Missões</h3>
+          <button id="closeMissions" class="btn secondary" type="button" style="padding:8px 10px;">Fechar</button>
+        </header>
+        <div id="missionsList" class="body"></div>
+      </div>
     </div>
   </div>
 
   <!-- Main script for page navigation and game state -->
+  <script src="js/core.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
