--- a/index.html
+++ b/index.html
@@ -153,6 +153,26 @@
         <div id="missionsList" class="body"></div>
       </div>
     </div>
+
+    <!-- Modal Evento / Decisão (cinemático) -->
+    <div id="eventModal" class="modal-backdrop">
+      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="eventTitle">
+        <header>
+          <div style="display:flex; flex-direction:column; gap:2px;">
+            <h3 id="eventTitle">COMUNICAÇÃO OFICIAL</h3>
+            <div id="eventSpeaker" style="opacity:.8; font-size:12px;">—</div>
+          </div>
+          <div style="display:flex; gap:10px; align-items:center;">
+            <button id="skipEvent" class="btn secondary" type="button" style="padding:8px 10px;">Pular</button>
+            <button id="closeEvent" class="btn secondary" type="button" style="padding:8px 10px;">Fechar</button>
+          </div>
+        </header>
+        <div class="body">
+          <div id="eventText" class="typewriter" style="min-height: 120px;"></div>
+          <div id="eventChoices" style="margin-top:14px; display:flex; flex-direction:column; gap:10px;"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Main script for page navigation and game state -->
