--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
           </div>
         </div>
       </button>
+      <button id="mapBtn" class="lobby-btn" aria-label="Mapa Global">
+        <div class="thumb" style="background-image:url('assets/images/background-war.png')"></div>
+        <div class="meta">
+          <span style="display:inline-grid;place-items:center;width:28px;height:28px;border-radius:10px;background:rgba(255,255,255,0.10);border:1px solid rgba(255,255,255,0.12);">🌐</span>
+          <div style="text-align:left">
+            <span>Mapa Global</span>
+            <div class="hint">Influência • regiões • domínio</div>
+          </div>
+        </div>
+      </button>
     </div>
 
     <!-- HUD AAA (fixo) -->
@@ -137,6 +147,7 @@
       <div class="pill grow" id="hudFunds">—</div>
       <div class="pill" id="hudIncome">—</div>
       <div class="hud-btns">
+        <button class="hud-icon" id="hudMap" title="Mapa">🌐</button>
         <button class="hud-icon" id="hudMissions" title="Missões">📌</button>
         <button class="hud-icon" id="hudNextTurn" title="Próximo turno">⏭</button>
         <button class="hud-icon" id="hudSave" title="Salvar">💾</button>
