--- a/war.html
+++ b/war.html
@@ -20,6 +20,12 @@
       </div>
     </header>
     <main class="module-content">
+      <section class="panel" id="ongoingWarsPanel">
+        <h3>Conflitos em andamento</h3>
+        <div id="warsList" class="wars-list">
+          <p class="muted">Nenhum conflito ativo.</p>
+        </div>
+      </section>
       <section class="select-war-target">
         <h3>Escolha o alvo</h3>
         <select id="targetNation" class="target-select"></select>
