--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
   </div>
 
   <!-- Main script for page navigation and game state -->
-  <script src="js/core.js"></script>
-  <script src="js/main.js"></script>
+  
+
+  <script defer src="js/build.js?v=1.0.4"></script>
+  <script defer src="js/core.js?v=1.0.4"></script>
+  <script defer src="js/main.js?v=1.0.4"></script>
 </body>
 </html>
