--- a/infrastructure.html
+++ b/infrastructure.html
@@ -31,7 +31,8 @@
         <tbody id="infraBody"></tbody>
       </table>
     </main>
-    <script src="js/core.js"></script>
-    <script src="js/infrastructure.js"></script>
+    <script defer src="js/build.js?v=1.0.4"></script>
+  <script defer src="js/core.js?v=1.0.4"></script>
+  <script defer src="js/infrastructure.js?v=1.0.4"></script>
   </body>
 </html>
