--- a/admin.html
+++ b/admin.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Medieval Kingdoms</title>
+  <title>Admin - Medieval Kingdoms</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app"></div>
-  <script type="module" src="src/app.js"></script>
+  <div id="admin-app"></div>
+  <script type="module" src="src/admin.js"></script>
 </body>
 </html>
