--- a/infrastructure.html
+++ b/infrastructure.html
@@ -31,8 +31,7 @@
         <tbody id="infraBody"></tbody>
       </table>
     </main>
-    <script defer src="js/build.js?v=1.0.5"></script>
-  <script defer src="js/core.js?v=1.0.5"></script>
-  <script defer src="js/infrastructure.js?v=1.0.4"></script>
+    <script src="js/core.js"></script>
+    <script src="js/infrastructure.js"></script>
   </body>
 </html>
