--- a/World-Protocol-1.0-main/infrastructure.html
+++ b/World-Protocol-1.0-main/infrastructure.html
@@ -3,35 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Centro de Comércio</title>
+    <title>Gestão de Infraestrutura</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body class="bg-commerce">
+  <body class="bg-infrastructure">
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
-      <h1>Centro de Comércio</h1>
+      <h1>Infraestrutura</h1>
       <div class="module-stats">
         <span class="stat">Saldo: <b id="fundsDisplay">—</b></span>
+        <span class="stat">Saldo mensal (prev.): <b id="netPreview">—</b></span>
       </div>
     </header>
     <main class="module-content">
       <table>
         <thead>
           <tr>
-            <th>Produto</th>
-            <th>Preço (cada)</th>
-            <th>Quantidade</th>
+            <th>Setor</th>
+            <th>Investimento</th>
             <th>Ações</th>
           </tr>
         </thead>
-        <tbody id="productsBody"></tbody>
+        <tbody id="infraBody"></tbody>
       </table>
     </main>
-    <script src="js/core.js"></script>
-    <script src="js/commerce.js"></script>
+    <script defer src="js/build.js?v=1.0.5"></script>
+  <script defer src="js/core.js?v=1.0.5"></script>
+  <script defer src="js/infrastructure.js?v=1.0.4"></script>
   </body>
 </html>
