--- a/commerce.html
+++ b/commerce.html
@@ -31,7 +31,8 @@
         <tbody id="productsBody"></tbody>
       </table>
     </main>
-    <script src="js/core.js"></script>
-    <script src="js/commerce.js"></script>
+    <script defer src="js/build.js?v=1.0.5"></script>
+  <script defer src="js/core.js?v=1.0.5"></script>
+  <script defer src="js/commerce.js?v=1.0.4"></script>
   </body>
 </html>
