--- a/map.html
+++ b/map.html
@@ -93,7 +93,8 @@
     </section>
   </main>
 
-  <script src="js/core.js"></script>
-  <script src="js/map.js"></script>
+  <script defer src="js/build.js?v=1.0.5"></script>
+  <script defer src="js/core.js?v=1.0.5"></script>
+  <script defer src="js/map.js?v=1.0.4"></script>
 </body>
 </html>
