--- a/relations.html
+++ b/relations.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body class="bg-relations">
+  <div class="vignette"></div>
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Centro de Relações</h1>
@@ -25,8 +26,9 @@
         <div id="details" class="details"></div>
       </section>
     </main>
-    <script defer src="js/build.js?v=1.0.9"></script>
-  <script defer src="js/core.js?v=1.0.9"></script>
-  <script defer src="js/relations.js?v=1.0.9"></script>
+    <script defer src="js/build.js?v=1.1.5"></script>
+  <script defer src="js/core.js?v=1.1.5"></script>
+  <script src="js/audio.js?v=1.1.5"></script>
+  <script defer src="js/relations.js?v=1.1.5"></script>
   </body>
 </html>
