--- a/war.html
+++ b/war.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body class="bg-war">
+  <div class="vignette"></div>
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Central de Guerra</h1>
@@ -59,8 +60,9 @@
         </div>
       </section>
     </main>
-    <script defer src="js/build.js?v=1.0.9"></script>
-  <script defer src="js/core.js?v=1.0.9"></script>
-  <script defer src="js/war.js?v=1.0.9"></script>
+    <script defer src="js/build.js?v=1.1.5"></script>
+  <script defer src="js/core.js?v=1.1.5"></script>
+  <script src="js/audio.js?v=1.1.5"></script>
+  <script defer src="js/war.js?v=1.1.5"></script>
   </body>
 </html>
