--- a/infrastructure.html
+++ b/infrastructure.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body class="bg-infrastructure">
+  <div class="vignette"></div>
     <header class="module-header">
       <button class="btn secondary" id="backBtn">Voltar</button>
       <h1>Infraestrutura</h1>
@@ -31,8 +32,9 @@
         <tbody id="infraBody"></tbody>
       </table>
     </main>
-    <script defer src="js/build.js?v=1.0.9"></script>
-  <script defer src="js/core.js?v=1.0.9"></script>
-  <script defer src="js/infrastructure.js?v=1.0.9"></script>
+    <script defer src="js/build.js?v=1.1.5"></script>
+  <script defer src="js/core.js?v=1.1.5"></script>
+  <script src="js/audio.js?v=1.1.5"></script>
+  <script defer src="js/infrastructure.js?v=1.1.5"></script>
   </body>
 </html>
