--- a/map.html
+++ b/map.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-screen" style="background-image:url('assets/images/background-main.png')">
+  <div class="vignette"></div>
   <header class="topbar">
     <button class="icon-btn" id="backBtn" aria-label="Voltar">←</button>
     <div class="topbar-title">
@@ -96,8 +97,9 @@
     </section>
   </main>
 
-  <script defer src="js/build.js?v=1.0.9"></script>
-  <script defer src="js/core.js?v=1.0.9"></script>
-  <script defer src="js/map.js?v=1.0.9"></script>
+  <script defer src="js/build.js?v=1.1.5"></script>
+  <script defer src="js/core.js?v=1.1.5"></script>
+  <script src="js/audio.js?v=1.1.5"></script>
+  <script defer src="js/map.js?v=1.1.5"></script>
 </body>
 </html>
